Added an API that allows to modify the position of a property.
